feature update todo

--- a/src/components/atoms/button/styles.module.scss
+++ b/src/components/atoms/button/styles.module.scss
@@ -57,6 +57,11 @@
     &:hover {
       background-color: $BRAND1;
     }
+
+    &[data-danger='true'] {
+      background-color: $R700;
+      border: 1px solid $R700;
+    }
   }
 
   &.secondary {
